--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,8 @@
 services:
   - type: web
-    name: Calculadora3D
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
-    pythonVersion: 3.12.2
-
-buildCommand: pip install --upgrade pip setuptools wheel && pip install -r requirements.txt
+    name: my-app
+    env: node
+    buildCommand: npm install
+    startCommand: npm start
+    repo: https://github.com/your-username/your-repo
+    branch: main
